# IHaskell

./: Dockerfile  ihaskell.cabal  stack.yaml
