-- The name of the package.
name:                ihaskell

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.8.4.0

-- A short (one-line) description of the package.
synopsis:            A Haskell backend kernel for the IPython project.

-- A longer description of the package.
description:         IHaskell is a Haskell backend kernel for the IPython project. This allows using Haskell via 
                     a console or notebook interface. Additional packages may be installed to provide richer data visualizations. 

-- URL for the project homepage or repository.
homepage:            http://github.com/gibiansky/IHaskell

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Andrew Gibiansky

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          andrew.gibiansky@gmail.com

-- A copyright notice.
-- copyright:           

category:            Development

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.16

data-files: 
    html/kernel.js
    html/logo-64x64.png

flag binPkgDb
  default:             True
  description:         bin-package-db package needed (needed for GHC >= 7.10)

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
                       aeson                
                      , base                 
                      , base64-bytestring    
                      , bytestring           
                      , cereal               
                      , cmdargs              
                      , containers           
                      , directory            
                      , filepath             
                      , ghc                  
                      , ghc-parser           
                      , ghc-paths            
                      , haskeline            
                      , hlint                
                      , haskell-src-exts     
                      , http-client          
                      , http-client-tls      
                      , mtl                  
                      , parsec               
                      , process              
                      , random               
                      , shelly               
                      , split                
                      , stm                  
                      , strict               
                      , system-argv0         
                      , text                 
                      , transformers         
                      , unix                 
                      , unordered-containers 
                      , utf8-string          
                      , uuid                 
                      , vector               
                      , ipython-kernel       
                      , wreq
                      , QuickCheck
                      , hxt
                      , lens
                      , lens-aeson
                      , regex-pcre-builtin
                      , string-conv
                      , HandsomeSoup
                      , iso8601-time
  if flag(binPkgDb)
    build-depends:       bin-package-db

  exposed-modules: IHaskell.Display
                   IHaskell.Convert
                   IHaskell.Convert.Args
                   IHaskell.Convert.IpynbToLhs
                   IHaskell.Convert.LhsToIpynb
                   IHaskell.Eval.Completion
                   IHaskell.Eval.Inspect
                   IHaskell.Eval.Evaluate
                   IHaskell.Eval.Info
                   IHaskell.Eval.Lint
                   IHaskell.Eval.Parser
                   IHaskell.Eval.Hoogle
                   IHaskell.Eval.ParseShell
                   IHaskell.Eval.Widgets
                   IHaskell.Eval.Util
                   IHaskell.Publish
                   IHaskell.IPython
                   IHaskell.IPython.Stdin
                   IHaskell.Flags
                   IHaskell.Types
                   IHaskell.BrokenPackages
                   IHaskell.CSS
                   Paths_ihaskell
  other-modules: 
                   IHaskellPrelude
                   StringUtils

  default-extensions:
      NoImplicitPrelude
      DoAndIfThenElse
      OverloadedStrings
      ExtendedDefaultRules

executable ihaskell
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  hs-source-dirs: main
  other-modules: 
                   IHaskellPrelude
                   Paths_ihaskell
  ghc-options: -threaded
  
  -- Other library packages from which modules are imported.
  default-language:    Haskell2010
  build-depends:       
                        ihaskell
                      , base                 
                      , text                 
                      , transformers         
                      , ghc                  
                      , process              
                      , aeson                
                      , bytestring           
                      , containers           
                      , strict               
                      , unix                 
                      , directory            
                      , ipython-kernel       

  if flag(binPkgDb)
    build-depends:       bin-package-db

  default-extensions:
      NoImplicitPrelude
      DoAndIfThenElse
      OverloadedStrings
      ExtendedDefaultRules

Test-Suite hspec
    Type: exitcode-stdio-1.0
    Ghc-Options: -threaded
    Main-Is: Hspec.hs
    hs-source-dirs: src/tests
    other-modules:
        IHaskell.Test.Eval
        IHaskell.Test.Completion
        IHaskell.Test.Util
        IHaskell.Test.Parser
    default-language: Haskell2010
    build-depends:
        base,
        ihaskell,
        here,
        hspec,
        HUnit,
        ghc,
        ghc-paths,
        transformers,
        directory,
        text,
        shelly,
        setenv

    if flag(binPkgDb)
        build-depends: bin-package-db

    default-extensions:
        DoAndIfThenElse
        OverloadedStrings
        ExtendedDefaultRules

source-repository head
  type:     git
  location: git://github.com/gibiansky/IHaskell.git
